classDiagram
    class Task {
        +str description
        +str scheduled_time
        +str frequency
        +date due_date
        +int duration_minutes
        +str priority
        +bool completed
        +str pet_name
        +mark_complete()
        +fits_within(available_minutes)
        +is_due_for(target_date)
        +next_due_date()
        +spawn_next_occurrence()
        +describe()
    }

    class Pet {
        +str name
        +str species
        +int age_years
        +list care_notes
        +list tasks
        +add_task(task)
        +remove_task(task_description)
        +get_required_tasks(target_date)
    }

    class Owner {
        +str name
        +int available_minutes_per_day
        +dict preferences
        +list pets
        +add_pet(pet)
        +remove_pet(pet_name)
        +update_preferences(preferences)
        +get_pet(pet_name)
        +get_all_tasks()
    }

    class Scheduler {
        +Owner owner
        +date plan_date
        +list planned_tasks
        +list explanations
        +list warnings
        +collect_tasks()
        +sort_by_time(tasks)
        +filter_tasks(tasks, completed, pet_name, due_on)
        +prioritize_tasks(tasks)
        +detect_conflicts(tasks)
        +mark_task_complete(task)
        +generate_plan()
        +explain_plan()
    }

    Owner "1" --> "*" Pet : cares for
    Pet "1" --> "*" Task : owns
    Scheduler --> Owner : reads
    Scheduler ..> Task : sorts and schedules
